[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Oswald-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Mobile.gd" type="Script" id=6]
[ext_resource path="res://srcs/Game.mp3" type="AudioStream" id=7]
[ext_resource path="res://srcs/spike.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 245.5, 16 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 244.5, 12 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 357 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.447059, 0.760784, 0.913725, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.313726, 0.631373, 0.788235, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id=9]
resource_name = "GG"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("GG:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 29, -0.25, 0, 0.25, 0, 29, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GG:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -939, -0.25, 0, 0.25, 0, 33, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5 )
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("GG:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 29, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GG:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -939, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG/BottomSpike:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BG/BottomSpike:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BG/BottomSpike3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BG/TopSpike:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.918776, 0.518603, 0.518603, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BG/TopSpike2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.918776, 0.518603, 0.518603, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BG/TopSpike3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "flushing"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BG/BottomSpike:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ), Color( 0.913725, 0.52549, 0.52549, 1 ), Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/BottomSpike2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ), Color( 0.913725, 0.52549, 0.52549, 1 ), Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG/BottomSpike3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ), Color( 0.913725, 0.52549, 0.52549, 1 ), Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BG/TopSpike:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ), Color( 0.913725, 0.52549, 0.52549, 1 ), Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BG/TopSpike2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ), Color( 0.913725, 0.52549, 0.52549, 1 ), Color( 1, 0.407843, 0.407843, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BG/TopSpike3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.407843, 0.407843, 1 ), Color( 0.913725, 0.52549, 0.52549, 1 ), Color( 1, 0.407843, 0.407843, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 65, 65 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.858824, 0.419608, 0.419608, 0.745098 )

[sub_resource type="DynamicFont" id=23]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 65, 65 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.309804, 0.521569, 0.823529, 0.745098 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 115, 65 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.847656, 0.673717, 0.304626, 1 )

[sub_resource type="DynamicFont" id=26]
size = 64
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
Menu = ExtResource( 5 )

[node name="BG" type="CanvasLayer" parent="."]
layer = -100

[node name="ColorRect" type="ColorRect" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 220, 330 )
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="BottomSpike" type="Sprite" parent="BG"]
modulate = Color( 1, 0.407843, 0.407843, 1 )
position = Vector2( 91, 736 )
scale = Vector2( 1.14583, 1.30208 )
texture = ExtResource( 8 )

[node name="BottomSpike2" type="Sprite" parent="BG"]
modulate = Color( 0.913725, 0.52549, 0.52549, 1 )
position = Vector2( 258, 736 )
scale = Vector2( 1.14583, 1.30208 )
texture = ExtResource( 8 )

[node name="BottomSpike3" type="Sprite" parent="BG"]
modulate = Color( 1, 0.407843, 0.407843, 1 )
position = Vector2( 423, 736 )
scale = Vector2( 1.14583, 1.30208 )
texture = ExtResource( 8 )

[node name="TopSpike" type="Sprite" parent="BG"]
modulate = Color( 0.918776, 0.518603, 0.518603, 1 )
position = Vector2( 82, -26 )
rotation = 3.14159
scale = Vector2( 1.14583, 1.30208 )
texture = ExtResource( 8 )

[node name="TopSpike2" type="Sprite" parent="BG"]
modulate = Color( 0.918776, 0.518603, 0.518603, 1 )
position = Vector2( 246, -26 )
rotation = 3.14159
scale = Vector2( 1.14583, 1.30208 )
texture = ExtResource( 8 )

[node name="TopSpike3" type="Sprite" parent="BG"]
modulate = Color( 1, 0.407843, 0.407843, 1 )
position = Vector2( 412, -26 )
rotation = 3.14159
scale = Vector2( 1.14583, 1.30208 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="BG"]
position = Vector2( 252, 694 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Area2D"]
position = Vector2( -6.5, 2 )
shape = SubResource( 27 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BG/Area2D"]
position = Vector2( -6.5, -683 )
shape = SubResource( 27 )

[node name="StaticBody2D" type="StaticBody2D" parent="BG/Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Area2D/StaticBody2D"]
position = Vector2( -5.5, 0 )
shape = SubResource( 28 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BG/Area2D/StaticBody2D"]
position = Vector2( -5.5, -681 )
shape = SubResource( 28 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 220, 64 )
gravity = 15
jumpforce = 500

[node name="Up" type="Position2D" parent="."]
position = Vector2( 45, 1073 )

[node name="Down" type="Position2D" parent="."]
position = Vector2( 438, -264 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Platform" parent="." instance=ExtResource( 3 )]
position = Vector2( 267, 810 )

[node name="Border" type="StaticBody2D" parent="."]
position = Vector2( -60, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2( 28, 350 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2( 583, 348.5 )
shape = SubResource( 1 )

[node name="Score" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="GG" type="Panel" parent="."]
margin_left = 29.0
margin_top = -939.0
margin_right = 461.0
margin_bottom = -320.0
custom_styles/panel = SubResource( 3 )

[node name="GG" type="Label" parent="GG"]
margin_left = 166.0
margin_top = 6.0
margin_right = 256.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 4 )
text = "GG!"

[node name="Score" type="Label" parent="GG"]
margin_left = 159.0
margin_top = 88.0
margin_right = 261.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 5 )
text = "Score: 1"

[node name="retry" type="Button" parent="GG"]
margin_left = 65.0
margin_top = 180.0
margin_right = 388.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "TRY AGAIN!!!!!"

[node name="quit" type="Button" parent="GG"]
margin_left = 65.0
margin_top = 345.0
margin_right = 388.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "GO MENU!!!!!!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "flushing"
anims/GG = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/flushing = SubResource( 29 )

[node name="Mobile" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Left" type="TouchScreenButton" parent="Mobile"]
visible = false
position = Vector2( 0, 582 )
shape = SubResource( 19 )
action = "left"

[node name="Panel" type="Panel" parent="Mobile/Left"]
margin_top = -3.0
margin_right = 134.0
margin_bottom = 132.0
custom_styles/panel = SubResource( 22 )

[node name="Label" type="Label" parent="Mobile/Left/Panel"]
margin_left = 21.0
margin_top = 28.0
margin_right = 105.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 23 )
text = "LEFT"

[node name="Right" type="TouchScreenButton" parent="Mobile"]
visible = false
position = Vector2( 358, 578 )
shape = SubResource( 20 )
action = "right"

[node name="Panel" type="Panel" parent="Mobile/Right"]
margin_left = -2.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 132.0
custom_styles/panel = SubResource( 24 )

[node name="Label" type="Label" parent="Mobile/Right/Panel"]
margin_left = 7.0
margin_top = 34.0
margin_right = 128.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 23 )
text = "RIGHT"

[node name="Jump" type="TouchScreenButton" parent="Mobile"]
visible = false
position = Vector2( 130, 579 )
shape = SubResource( 21 )
action = "jump"

[node name="Panel" type="Panel" parent="Mobile/Jump"]
margin_left = 1.0
margin_right = 229.0
margin_bottom = 133.0
custom_styles/panel = SubResource( 25 )

[node name="Label" type="Label" parent="Mobile/Jump/Panel"]
margin_left = 48.0
margin_top = 18.0
margin_right = 190.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 26 )
text = "JUMP"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="body_entered" from="BG/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Score" to="." method="_on_Score_timeout"]
[connection signal="pressed" from="GG/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="GG/quit" to="." method="_on_quit_pressed"]
